css fix img size and spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -151,7 +151,7 @@ body{
 h1{
     text-align: center;
     padding-left: 10px;
-    padding-top: 5%;
+    padding-top: 2%;
 }
 
 .bartender-content{
@@ -217,11 +217,13 @@ h2{
     left: 65px;
     text-decoration: none;
 }
+
 a{
     text-decoration: none;
     text-transform: uppercase;
     color: black;
 }
+
 .delete-button{
     position: relative;
     height: 25px;
@@ -229,6 +231,7 @@ a{
     left: 65px;
     display: block;
 }
+
 .recipe-new{
     background-color: bisque;
     max-width: 85%;
@@ -236,6 +239,7 @@ a{
     text-align: center;
     padding-bottom: 10%;
 }
+
 .update-button{
     position: relative;
     height: 25px;
@@ -243,16 +247,23 @@ a{
     left: 65px;
     text-decoration: none;
 }
+
 .recipe-feed{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     max-width: 85%;
     margin: 0 auto;
     background-color: bisque;
-    
 }
-.recipe-feed ul{
-    list-style: none;
+
+img{
+    width: 300px;
+    height: 330px;
+    padding: 2%;
 }
-.recipe-feed li{
-    text-align: center;
+
+.photofeed{
+    justify-content: space-evenly;
+    padding: 2%;
 }
